log
Sat 18 May 2024 07:35:08 PM UTC: 
 tests:  0|5
total_score: 0/70
c82b857
Sun 19 May 2024 02:19:22 AM UTC: 
 sudoku.c | 67 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 66 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:23: error: variable ‘columna’ set but not used [-Werror=unused-but-set-variable]
   48 |    int fila [10]; int columna [10]; int aux [10];
      |                       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2639007
Sun 19 May 2024 02:19:36 AM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:8: error: variable ‘columna’ set but not used [-Werror=unused-but-set-variable]
   49 |    int columna [10];
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0b51ea2
Sun 19 May 2024 02:22:00 AM UTC: 
 sudoku.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:8: error: variable ‘columna’ set but not used [-Werror=unused-but-set-variable]
   49 |    int columna [10];
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2420c10
Sun 19 May 2024 02:24:58 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:80:19: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   80 |                   if (columna[nColumna] == 1);
      |                   ^~
sudoku.c:81:19: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   81 |                   {
      |                   ^
sudoku.c:84:19: error: expected ‘}’ before ‘else’
   84 |                   else
      |                   ^~~~
sudoku.c:50:8: error: unused variable ‘aux’ [-Werror=unused-variable]
   50 |    int aux [10];
      |        ^~~
sudoku.c: At top level:
sudoku.c:92:4: error: expected identifier or ‘(’ before ‘for’
   92 |    for (int i = 0; i < 9; i++)
      |    ^~~
sudoku.c:92:22: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
   92 |    for (int i = 0; i < 9; i++)
      |                      ^
sudoku.c:92:28: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
   92 |    for (int i = 0; i < 9; i++)
      |                            ^~
sudoku.c:119:5: error: expected identifier or ‘(’ before ‘return’
  119 |     return 1;
      |     ^~~~~~
sudoku.c:120:1: error: expected identifier or ‘(’ before ‘}’ token
  120 | }
      | ^
sudoku.c: In function ‘is_valid’:
sudoku.c:90:7: error: control reaches end of non-void function [-Werror=return-type]
   90 |       }
      |       ^
cc1: all warnings being treated as errors
Compilation failed
ebb5097
Sun 19 May 2024 02:25:10 AM UTC: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:8: error: variable ‘columna’ set but not used [-Werror=unused-but-set-variable]
   49 |    int columna [10];
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e0f7efa
Sun 19 May 2024 02:26:55 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|3
total_score: 35/70
03223d9
Sun 19 May 2024 03:12:16 AM UTC: 
 sudoku.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:167:11: error: unused variable ‘stack’ [-Werror=unused-variable]
  167 |    Stack* stack = createStack();
      |           ^~~~~
cc1: all warnings being treated as errors
Compilation failed
6733cad
Sun 19 May 2024 03:12:23 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|3
total_score: 35/70
9c14b6b
Sun 19 May 2024 03:14:04 AM UTC: 
 sudoku.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:181:16: error: unused variable ‘aux’ [-Werror=unused-variable]
  181 |          Node* aux = first(adj);
      |                ^~~
cc1: all warnings being treated as errors
Compilation failed
48509be
Sun 19 May 2024 03:14:14 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
20f6002
847c327
Sun 19 May 2024 03:19:03 AM UTC: 
 sudoku.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
 tests:  6|2
total_score: 45/70
2f1caa6
Sun 19 May 2024 03:21:56 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 55/70
b2c9edd
Sun 19 May 2024 03:23:00 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|0
total_score: 70/70
19e769e
